Ensure text remains visible during webfont load

--- a/site/src/app.css
+++ b/site/src/app.css
@@ -13,6 +13,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-100.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-100.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-100.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-200 - latin */
@@ -26,6 +27,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-200.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-200.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-200.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-300 - latin */
@@ -52,6 +54,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-regular.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-regular.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-500 - latin */
@@ -65,6 +68,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-500.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-500.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-500.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-700 - latin */
@@ -78,6 +82,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-700.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-700.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-700.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-600 - latin */
@@ -91,6 +96,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-600.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-600.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-600.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-800 - latin */
@@ -104,6 +110,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-800.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-800.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-800.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 /* inter-900 - latin */
@@ -117,6 +124,7 @@
 		/* Super Modern Browsers */ url('/fonts/inter-v12-latin-900.woff') format('woff'),
 		/* Modern Browsers */ url('/fonts/inter-v12-latin-900.ttf') format('truetype'),
 		/* Safari, Android, iOS */ url('/fonts/inter-v12-latin-900.svg#Inter') format('svg'); /* Legacy iOS */
+	font-display: swap;
 }
 
 html {
